[gd_scene load_steps=14 format=3 uid="uid://doinf7rp2onby"]

[ext_resource type="Script" uid="uid://dajrje2vacyt0" path="res://scripts/panel.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dwqpdexu2c075" path="res://bg.tres" id="1_o6xl0"]
[ext_resource type="FontFile" uid="uid://mteonrh2rrl3" path="res://COMIC.TTF" id="2_tbgi4"]
[ext_resource type="Texture2D" uid="uid://bx0bvevtwl5dx" path="res://assets/icon.svg" id="3_tefeu"]
[ext_resource type="Script" uid="uid://bmyingsusxf0a" path="res://scripts/icon.gd" id="4_o6xl0"]
[ext_resource type="Script" uid="uid://hr4vcbyr5hwn" path="res://scripts/combo_meter.gd" id="5_tbgi4"]
[ext_resource type="Gradient" uid="uid://b1ijituxtm1ox" path="res://new_gradient.tres" id="6_tefeu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(663.22, 746.123)

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.86849, 0.86849)]
}

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "click"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.86849, 0.86849), Vector2(0.712987, 0.712987)]
}

[sub_resource type="Animation" id="Animation_0xm2m"]
resource_name = "release"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.712987, 0.712987), Vector2(0.86849, 0.86849)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7mycd"]
_data = {
&"RESET": SubResource("Animation_lquwl"),
&"click": SubResource("Animation_1bvp3"),
&"release": SubResource("Animation_0xm2m")
}

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o6xl0"]
gradient = ExtResource("6_tefeu")

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("1_o6xl0")

[node name="Panel" type="Panel" parent="."]
offset_top = -326.0
offset_right = 578.0
offset_bottom = 326.0
script = ExtResource("1_jyhfs")

[node name="Clicks" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 53.0
offset_top = -4.0
offset_right = 529.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 60
text = "9999999999999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cps per second" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 160.0
offset_top = 63.0
offset_right = 436.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 40
text = "15 Per Second:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_top = 133.0
offset_right = 578.0
offset_bottom = 652.0

[node name="Clicks" type="Label" parent="Panel/Panel"]
layout_mode = 0
offset_left = 62.0
offset_top = 11.0
offset_right = 531.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 40
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 79.0
offset_right = 576.0
offset_bottom = 490.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/ScrollContainer"]
layout_mode = 2

[node name="Player" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Player"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "Add
Player"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Player"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Player"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Animation" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Animation"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "New
Animation"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Animation"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Animation"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Script" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Script"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "New
Script"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Script"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Script"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Texture" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Texture"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "New
Texture"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Texture"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Texture"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Debugging" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Debugging"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "Do Some
Debugging"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Debugging"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Debugging"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Character" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Character"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "New
Character"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Character"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Character"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Mesh" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Mesh"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "New
Mesh"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Mesh"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Mesh"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Level" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Level"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "New
Level"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Level"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Level"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="Release game" type="HBoxContainer" parent="Panel/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Release game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "Release
Game"

[node name="Button2" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Release game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "TBD"

[node name="Button3" type="Button" parent="Panel/Panel/ScrollContainer/VBoxContainer/Release game"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 31
text = "100,000
0 Owned"

[node name="click hitbox" type="Area2D" parent="."]
position = Vector2(-287.735, 0)
scale = Vector2(0.86849, 0.86849)

[node name="CollisionShape2D" type="CollisionShape2D" parent="click hitbox"]
position = Vector2(-0.305267, -1.53389e-05)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-288, 74)
scale = Vector2(0.86849, 0.86849)
texture = ExtResource("3_tefeu")
script = ExtResource("4_o6xl0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Icon"]
libraries = {
&"": SubResource("AnimationLibrary_7mycd")
}

[node name="cps timer" type="Timer" parent="Icon"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Combo meter" type="Label" parent="."]
offset_left = -526.0
offset_top = -301.0
offset_right = -50.0
offset_bottom = -216.0
theme_override_fonts/font = ExtResource("2_tbgi4")
theme_override_font_sizes/font_size = 40
text = "COMBO METER"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_tbgi4")

[node name="bounding box" type="ColorRect" parent="Combo meter"]
layout_mode = 0
offset_left = 33.0
offset_top = 90.0
offset_right = 443.0
offset_bottom = 130.0

[node name="mcps Timer" type="Timer" parent="Combo meter"]

[node name="bar" type="TextureRect" parent="Combo meter"]
layout_mode = 0
offset_left = 38.0
offset_top = 95.0
offset_right = 438.0
offset_bottom = 125.0
texture = SubResource("GradientTexture2D_o6xl0")
expand_mode = 1

[connection signal="mouse_entered" from="click hitbox" to="Icon" method="_on_click_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="click hitbox" to="Icon" method="_on_click_hitbox_mouse_exited"]
[connection signal="timeout" from="Icon/cps timer" to="Icon" method="_on_timer_timeout"]
[connection signal="timeout" from="Combo meter/mcps Timer" to="Combo meter" method="_on_mcps_timer_timeout"]
